--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
 - cd $TRAVIS_BUILD_DIR/googletest/make
 - make
 - ./sample1_unittest 
+- cd $TRAVIS_BUILD_DIR
 - coveralls  -i googletest/samples
 after_script:
 before_install:
